<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GTmyMusic</string>
    <string name="action_settings">Settings</string>
    <string name="button_list">LIST</string>
    <string name="button_diff">DIFF</string>
    <string name="button_pull">PULL</string>
    <string name="button_leave">LEAVE</string>
    <string name="button_cap">SET CAP</string>
    <string name="cap_hint">Cap in MB</string>
    <string name="current_cap">Current: </string>
	<string name="current_cap_value">N/A</string>
    
</resources>
