<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical" >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_list"
        android:onClick="list" />
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_diff" 
        android:onClick="diff" />
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_pull" />
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_leave" />
        
	</LinearLayout>
	
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
        
        <EditText android:id="@+id/edit_message"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/cap_hint" />
        
        <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_cap" />
        
    </LinearLayout>
	
    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />
    
</LinearLayout>
